[bug] Fixes #232 - events view on mobile should fix screen on mobile

--- a/app/assets/stylesheets/layouts/_default.scss
+++ b/app/assets/stylesheets/layouts/_default.scss
@@ -14,7 +14,7 @@ body {
 }
 
 section {
-  @extend .col-sm-12, .col-md-8, .col-lg-8;
+  @extend .col-sm-12, .col-md-9, .col-lg-9;
 }
 
 a,
